# d365fo-security-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  env.example  pyproject.toml
.github/workflows/: ci.yml
d365-xpp/: README.md
d365-xpp/SMCPSecurityModel/AxClass/: SMCPSecurityRoleEventHandler.xpp  SMCPTelemetryProperty.xpp
docs/: azure-ad-setup.md  d365-custom-entities.md  licence-file-format.md  sod-ruleset-format.md
examples/: sod-rules-sample.json
src/d365fo_security_mcp/: __main__.py  main.py  server.py
tests/: conftest.py
tests/fixtures/: security_duties.json  security_privileges.json  security_roles.json  sod_test_users.json  system_users.json  user_role_assignments.json
tests/integration/: test_odata_client.py
tests/live/: conftest.py  test_live_app_insights.py  test_live_assess.py  test_live_drilldown.py  test_live_over_licensed.py  test_live_server_config.py  test_live_sod.py  test_live_sod_analysis.py  test_live_sod_filters.py  test_live_sod_review.py  test_live_summary.py  test_live_under_licensed.py  test_live_validate_source.py  test_live_what_if.py  test_live_what_if_sod.py
tests/unit/: test_assess.py  test_config.py  test_drilldown.py  test_graph_provider.py  test_licence_source.py  test_licence_tier.py  test_over_licensed.py  test_providers.py  test_sod_access_review.py  test_sod_assignments.py  test_sod_change_log.py  test_sod_detector.py  test_sod_dormant.py  test_sod_filters.py  test_sod_health_score.py  test_sod_high_risk.py  test_sod_login_activity.py  test_sod_matrix.py  test_sod_org_map.py  test_sod_profile.py  test_sod_role_tree.py  test_sod_ruleset.py  test_sod_violations.py  test_summary.py  test_under_licensed.py  test_what_if.py  test_what_if_sod.py
(+39 files in other folders)
